--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -7,30 +7,28 @@
   box-sizing: border-box;
   width: 320px;
   margin: 0 auto;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .example__title {
   box-sizing: border-box;
   width: 320px;
   margin: 0 auto;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
   font-weight: 400;
   font-size: 36px;
   line-height: 60px;
   text-transform: none;
   display: flex;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 18px;
 }
 
 .example__description {
   box-sizing: border-box;
   margin: 0;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 22px;
   font-family: "Arial", sans-serif;
 }
 
@@ -78,6 +76,7 @@ legend {
 }
 
 .example__text {
+  padding-top: 10px;
   font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
@@ -92,14 +91,19 @@ legend {
 
   .example__wrapper {
     width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-bottom: 220px;
   }
 
   .example__title {
     font-size: 60px;
     line-height: 60px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   .example__description {
@@ -108,6 +112,7 @@ legend {
   }
 
   .example__info {
+    padding-top: 30px;
     display: flex;
     flex-direction: row;
   }
@@ -151,7 +156,6 @@ legend {
   }
 
   .example__positioner {
-    padding-bottom: 70px;
     width: 1300px;
     margin: 0 auto;
     box-sizing: border-box;
@@ -168,6 +172,10 @@ legend {
     margin: 0;
   }
 
+  .example__weight {
+    width: 160px;
+  }
+
   .example__wrap-text {
     width: 100%;
   }
@@ -178,9 +186,9 @@ legend {
     box-sizing: border-box;
     margin: 0;
     padding-top: 70px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 15px;
   }
 
   .example__info {
@@ -188,8 +196,9 @@ legend {
     flex-direction: column;
     box-sizing: border-box;
     margin: 0 auto;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-top: 0;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   .example__wrap-title {
@@ -201,10 +210,14 @@ legend {
 
   .example__title {
     width: 1300px;
+    padding-top: 60px;
+    padding-bottom: 75px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   .example__text {
-    width: 350px;
+    width: 330px;
     text-align: center;
     margin-left: 0;
     display: flex;
@@ -214,5 +227,10 @@ legend {
 
   .example__legend {
     background-color: #f2f2f2;
+    margin-top: 45px;
+  }
+
+  .example__stats {
+    width: 365px;
   }
 }
