--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -84,20 +84,19 @@
 }
 
 @media (min-width: @tablet-width) {
-  .navigation__list {
-    width: auto;
-    margin: 0;
-  }
-
   .navigation {
-    width: 62%;
     background-color: #ffffff;
     color: #222222;
-    margin-left: 40px;
   }
 
   .navigation__toggle {
     display: none;
+  }
+
+  .navigation__list {
+    padding-left: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
 
@@ -111,5 +110,13 @@
     width: 50%;
     background-color: transparent;
     color: #ffffff;
+    margin-left: 70px;
+  }
+
+  .navigation__list {
+    margin-left: 115px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
   }
 }
