--- a/source/less/blocks/other_goods.less
+++ b/source/less/blocks/other_goods.less
@@ -68,7 +68,15 @@
   line-height: 20px;
   text-transform: uppercase;
   color: #ffffff;
-  background-color: #63a73a;
+  background-color: #68b738;
+}
+
+.other-goods__order:hover {
+  background-color: #5eaa2f;
+}
+
+.other-goods__order:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 @media (min-width: @tablet-width) {
