--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,5 +1,5 @@
 .social__list {
-  width: 320px;
+  width: 280px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -13,6 +13,10 @@
 .social__icon--vk {
   width: 22px;
   height: 12px;
+}
+
+.social__icon path {
+  fill: #666666;
 }
 
 .social__icon--inst {
@@ -29,8 +33,56 @@
   margin: 20px;
 }
 
+.social__icon--vkontakte {
+  width: 22px;
+  height: 12px;
+}
+
+.social__icon--instagram {
+  width: 16px;
+  height: 16px;
+}
+
+.social__icon--facebook {
+  width: 10px;
+  height: 19px;
+}
+
+.social__link:hover path {
+  fill: #68b738;
+}
+
+.social__link:active {
+  opacity: 0.3;
+}
+
 @media (min-width: @tablet-width) {
   .social__list {
     border-bottom: none;
+  }
+
+  .social__icon--vkontakte {
+    width: 30px;
+    height: 16px;
+  }
+
+  .social__icon--instagram {
+    width: 23px;
+    height: 23px;
+  }
+
+  .social__icon--facebook {
+    width: 14px;
+    height: 28px;
+  }
+
+  .social__item {
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
+  .social__list {
+    width: auto;
+    margin-left: 20px;
   }
 }
