--- a/source/less/blocks/view_more.less
+++ b/source/less/blocks/view_more.less
@@ -46,6 +46,15 @@
   background-color: #f2f2f2;
 }
 
+.view-more__button:hover {
+  background-color: #ebebeb;
+}
+
+.view-more__button:active {
+  color: rgba(0, 0, 0, 0.3);
+  outline: none;
+}
+
 @media (min-width: @tablet-width) {
   .view-more {
     margin-top: 120px;
