--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -44,11 +44,19 @@
   align-items: center;
   width: 280px;
   height: 40px;
-  background-color: #63a73a;
+  background-color: #68b738;
   color: #ffffff;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 20px;
+}
+
+.catalog__order:hover {
+  background-color: #5eaa2f;
+}
+
+.catalog__order:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .catalog__list {
