--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -12,7 +12,7 @@
   box-sizing: border-box;
   width: 320px;
   margin: 0 auto;
-  padding-bottom: 30px;
+  padding-bottom: 25px;
   padding-top: 30px;
   padding-left: 20px;
   padding-right: 20px;
@@ -62,8 +62,8 @@
 
   .contacts__info {
     width: 768px;
-    padding-bottom: 60px;
-    padding-top: 60px;
+    padding-bottom: 55px;
+    padding-top: 65px;
     padding-left: 70px;
     padding-right: 70px;
   }
@@ -106,6 +106,7 @@
   }
 
   .contacts__text {
+    width: 180px;
     box-sizing: border-box;
     padding-bottom: 0;
   }
