--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -14,20 +14,34 @@
 }
 
 .footer__logo {
-  width: 320px;
+  width: 280px;
   display: flex;
   justify-content: center;
-  padding-top: 30px;
+  padding-top: 40px;
   padding-bottom: 30px;
   border-bottom: 1px solid #d9d9d9;
+}
+
+
+.footer__logo-image {
+  width: 135px;
+  height: 24px;
+}
+
+.footer__logo-image:hover {
+  opacity: 0.8;
+}
+
+.footer__logo-image:active {
+  opacity: 0.6;
 }
 
 @media (min-width: @tablet-width) {
   .footer__wrapper {
     width: 768px;
     box-sizing: border-box;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 40px;
+    padding-bottom: 70px;
     padding-left: 30px;
     padding-right: 30px;
     display: flex;
