--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -18,8 +18,16 @@
 }
 
 .header__logo-image {
-  width: 200px;
-  height: 50px;
+  width: 190px;
+  height: 38px;
+}
+
+.header__logo :hover {
+  opacity: 0.8;
+}
+
+.header__logo :active {
+  opacity: 0.6;
 }
 
 @media (min-width: @tablet-width) {
@@ -27,16 +35,21 @@
     width: 768px;
     flex-direction: row;
     justify-content: space-between;
+    padding-top: 21px;
   }
 
   .header__logo {
-    width: 220px;
-    padding: 20px 30px;
+    width: 280px;
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   .header__logo-image {
-    width: 192px;
-    height: 60px;
+    padding-top: 3px;
+    width: 173px;
+    height: 58px;
   }
 }
 
@@ -47,17 +60,20 @@
   }*/
 
   .header__wrapper {
+    padding-top: 53px;
+    padding-bottom: 48px;
     width: 1300px;
     justify-content: space-between;
     flex-direction: flex-end;
   }
 
   .header__logo {
+    padding: 0 40px;
     width: 245px;
   }
 
   .header__logo-image {
-    width: 215px;
-    height: 82px;
+    width: 202px;
+    height: 60px;
   }
 }
