--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -72,6 +72,10 @@
 @media (min-width: @tablet-width) {
   .slider {
     background-color: #f2f2f2;
+    position: relative;
+    min-height: 425px;
+    align-items: flex-end;
+    display: flex;
   }
 
   .slider__wrapper {
@@ -81,6 +85,8 @@
   }
 
   .slider__image {
+    position: absolute;
+    top: -150px;
     width: 690px;
     height: 517px;
   }
@@ -103,15 +109,44 @@
     left: 214px;
     box-shadow: 0 2px 5px 0 #cdcdcd;
   }
+
+  .slider__toggle {
+    font-size: 20px;
+    line-height: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  .slider__toggles {
+    width: 620px;
+    padding-top: 0px;
+    padding-bottom: 75px;
+  }
+
+  .before-after__toggle::after {
+    border: 12px solid #ffffff;
+    left: 185px;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .slider {
     width: 650px;
+    min-height: none;
+    padding-top: 35px;
+  }
+
+  .slider__toggle {
+    font-size: 20px;
+    line-height: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
 
   .slider__toggles {
-    padding-top: 330px;
+    width: 620px;
+    padding-top: 0px;
+    padding-bottom: 75px;
   }
 
   .slider__wrapper {
@@ -119,9 +154,14 @@
   }
 
   .slider__image {
-    top: 0;
+    top: -180px;
     position: absolute;
     margin: 0;
-    right: 0;
+    right: 40px;
+  }
+
+  .before-after__toggle::after {
+    border: 12px solid #ffffff;
+    left: 185px;
   }
 }
