--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -11,7 +11,7 @@
 .catalog__slogan {
   font-weight: 400;
   margin: 0;
-  padding-top: 30px;
+  padding-top: 15px;
   padding-bottom: 30px;
   font-size: 36px;
   line-height: 60px;
@@ -21,6 +21,7 @@
 
 .catalog__description {
   width: 140px;
+  padding-top: 10px;
 }
 
 .catalog__title {
@@ -74,8 +75,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   border-top: 1px solid #f2f2f2;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-bottom: 21px;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -102,10 +102,10 @@
 
   .catalog__slogan {
     padding: 0;
-    padding-top: 60px;
     padding-bottom: 60px;
     font-size: 60px;
     line-height: 60px;
+    padding-top: 25px;
   }
 
   .catalog__description {
@@ -113,7 +113,7 @@
   }
 
   .catalog__item {
-    margin-top: 120px;
+    margin-top: 105px;
     width: 324px;
     box-sizing: border-box;
     background-color: #f2f2f2;
@@ -132,21 +132,22 @@
     text-align: center;
     width: 130px;
     margin: 0 auto;
+    margin-top: 12px;
     font-size: 20px;
     line-height: 20px;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
   }
 
   .catalog__text {
     width: 255px;
     font-size: 16px;
     line-height: 16px;
-    padding-bottom: 30px;
+    padding-bottom: 32px;
   }
 
   .catalog__text td {
-    height: 30px;
+    height: 28px;
     border-bottom: 1px solid #cdcdcd;
   }
 
@@ -163,14 +164,18 @@
     width: 324px;
     height: 172px;
     position: absolute;
-    margin-top: -180px;
-    margin-left: -35px;
+    margin-top: -170px;
+    margin-left: -40px;
   }
 
   .catalog__image--big {
     width: 324px;
     height: 208px;
-    margin-top: -210px;
+    margin-top: -205px;
+  }
+
+  .catalog__list li {
+    margin-bottom: 5px;
   }
 }
 
@@ -195,8 +200,12 @@
     width: 170px;
   }
 
+  .catalog__list li {
+    margin-bottom: 9px;
+  }
+
   .catalog__text td {
-    height: 35px;
+    height: 25px;
   }
 
   .catalog__text td:nth-child(1) {
@@ -205,6 +214,11 @@
 
   .catalog__text td:nth-child(2) {
     text-align: right;
+  }
+
+  .catalog__title {
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 
   .catalog__image {
