--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -59,6 +59,8 @@
 @media (min-width: @tablet-width) {
   .social__list {
     border-bottom: none;
+    width: auto;
+    margin-left: 40px;
   }
 
   .social__icon--vkontakte {
@@ -80,9 +82,10 @@
     margin-right: 15px;
     margin-left: 15px;
   }
+}
 
+@media (min-width: @desktop-width) {
   .social__list {
-    width: auto;
-    margin-left: 20px;
+    margin-left: 40px;
   }
 }
