--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -5,6 +5,8 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin-top: 40px;
+  margin-bottom: 35px;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/gift-photo-mobile@2x.jpg");
@@ -23,8 +25,8 @@
   margin: 0 auto;
   display: block;
   height: 60px;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 65px;
+  padding-bottom: 65px;
 }
 
 .gift__img path {
@@ -33,18 +35,20 @@
 
 .gift__text {
   text-align: center;
-  padding-bottom: 45px;
+  padding-bottom: 38px;
   color: #ffffff;
   font-family: "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   margin: 0;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 45px;
+  padding-right: 45px;
 }
 
 @media (min-width: @tablet-width) {
   .gift {
+    margin-top: 65px;
+    margin-bottom: 78px;
     background-image: url("../img/gift-photo-tablet@1x.jpg");
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
@@ -88,6 +92,8 @@
     width: 245px;
     margin-left: 80px;
     margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     background-image: url("../img/gift-photo-desktop@1x.jpg");
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
@@ -110,7 +116,7 @@
   }
 
   .gift__text {
-    padding-top: 30px;
+    padding-top: 70px;
     text-align: center;
   }
 
