--- a/source/less/blocks/view_more.less
+++ b/source/less/blocks/view_more.less
@@ -31,6 +31,9 @@
   font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 16px;
+  margin: 0;
+  padding-top: 5px;
+  margin-bottom: 20px;
 }
 
 .view-more__button {
@@ -57,7 +60,7 @@
 
 @media (min-width: @tablet-width) {
   .view-more {
-    margin-top: 120px;
+    margin-top: 105px;
     width: 324px;
     box-sizing: border-box;
     padding: 40px;
@@ -65,12 +68,12 @@
   }
 
   .view-more__button {
-    margin-top: 80px;
+    margin-top: 85px;
     width: 249px;
   }
 
   .view-more__plus {
-    padding-top: 20px;
+    padding-top: 15px;
     padding-bottom: 20px;
     width: 60px;
     height: 60px;
@@ -80,12 +83,18 @@
     text-transform: uppercase;
     font-size: 20px;
     line-height: 20px;
+    padding-top: 30px;
+    width: 142px;
+    margin: 0 auto;
   }
 
   .view-more__text {
+    width: 170px;
     font-family: "Arial", sans-serif;
     font-size: 16px;
-    line-height: 16px;
+    line-height: 18px;
+    padding-top: 25px;
+    margin: 0 auto;
   }
 }
 
