автоматизация сборки личного проекта

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -78,6 +78,7 @@
   padding-bottom: 21px;
   padding-left: 20px;
   padding-right: 20px;
+  max-width: 320px;
 }
 
 .catalog__text td:nth-child(1) {
@@ -122,6 +123,7 @@
     padding: 40px;
     margin-bottom: 30px;
     padding-top: 120px;
+    max-width: none;
   }
 
   .catalog__order {
