--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -142,7 +142,7 @@
 
   .about__list {
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     padding-right: 0;
   }
 
@@ -152,7 +152,8 @@
   }
 
   .about__item {
-    width: 325px;
+    width: 245px;
+    box-sizing: border-box;
     margin-right: 80px;
   }
 
