--- a/source/less/blocks/view_more.less
+++ b/source/less/blocks/view_more.less
@@ -39,10 +39,12 @@
 .view-more__button {
   font-family: "Oswald", "Arial", sans-serif;
   border: none;
-  text-align: center;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 280px;
   height: 40px;
+  color: #444444;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 20px;
