--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -28,7 +28,7 @@
 .contacts__image {
   display: block;
   margin: 0 auto;
-  width: 320px;
+  width: 100%;
   height: 360px;
 }
 
@@ -83,7 +83,7 @@
   }
 
   .contacts__image {
-    width: 767px;
+    width: 100%;
     height: 400px;
   }
 }
@@ -91,6 +91,7 @@
 @media (min-width: @desktop-width) {
   .contacts__wrapper {
     width: 1300px;
+    margin: 0 auto;
   }
 
   .contacts__info {
@@ -112,7 +113,7 @@
   }
 
   .contacts__image {
-    width: 1440px;
+    width: 100%;
     height: 400px;
   }
 }
