--- a/source/less/fonts/fonts.less
+++ b/source/less/fonts/fonts.less
@@ -2,5 +2,6 @@
   font-weight: normal;
   font-family: "Oswald";
   font-style: normal;
+  font-display: swap;
   src: url("../fonts/oswaldregular.woff2") format("woff2"), url("../fonts/oswaldregular.woff") format("woff");
 }
