--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -10,7 +10,7 @@
   border-bottom: 1px solid #d9d9d9;
 }
 
-.social__link path {
+.social__link {
   fill: #666666;
 }
 
@@ -33,7 +33,7 @@
   height: 19px;
 }
 
-.social__link:hover path {
+.social__link:hover {
   fill: #68b738;
 }
 
