--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -107,7 +107,7 @@
     padding-bottom: 60px;
     font-size: 60px;
     line-height: 60px;
-    padding-top: 25px;
+    padding-top: 45px;
   }
 
   .catalog__description {
@@ -193,6 +193,10 @@
     width: 245px;
     justify-content: space-between;
     background-color: #f2f2f2;
+  }
+
+  .catalog__slogan {
+    padding-top: 25px;
   }
 
   .catalog__order {
