--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -76,6 +76,7 @@
   }
 
   .intro__wrapper {
+    position: relative;
     background-image: none;
     width: 768px;
     padding-left: 120px;
@@ -105,7 +106,7 @@
     width: 709px;
     height: 609px;
     position: absolute;
-    top: 340px;
+    top: 245px;
     right: 30px;
   }
 
@@ -119,7 +120,7 @@
     height: 52px;
     margin: 0 auto;
     position: absolute;
-    top: 370px;
+    top: 275px;
   }
 }
 
@@ -164,7 +165,7 @@
     z-index: 1;
     width: 552px;
     height: 499px;
-    top: 145px;
+    top: -25px;
     left: 270px;
   }
 
@@ -174,6 +175,6 @@
   }
 
   .intro__link {
-    top: 455px;
+    top: 290px;
   }
 }
