--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -71,8 +71,8 @@
 }
 
 @media (max-width: @mobile-width-only) {
-  .navigation--closed .site-list__item {
-    display: none;
+  .navigation--nojs .site-list__item {
+    display: block;
   }
 
   .navigation--opened .site-list__item {
