--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -525,6 +525,7 @@
     padding-right: 70px;
     padding-top: 70px;
     padding-bottom: 70px;
+    border-top: none;
   }
 
   .form__positioner--contacts {
@@ -590,6 +591,11 @@
   .form__block {
     padding-bottom: 18px;
   }
+
+  .form__wrap {
+    width: 100%;
+    border-top: 3px solid #63a73a;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -601,6 +607,7 @@
   }
 
   .form__positioner {
+    border-top: none;
     width: 1300px;
     padding-left: 40px;
     padding-right: 40px;
@@ -687,6 +694,11 @@
     padding-bottom: 90px;
   }
 
+  .form__wrap {
+    width: 100%;
+    border-top: 3px solid #63a73a;
+  }
+
   .form__list--goods {
     padding-left: 0;
     padding-top: 0;
@@ -701,5 +713,9 @@
   .form__footer {
     width: 835px;
     padding-bottom: 25px;
+  }
+
+  .form__headline {
+    margin-left: 0;
   }
 }
