--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -26,7 +26,7 @@
 }
 
 .contacts__image {
-  background-image: url("../img/bg-map-mobile@1x.jpg") no-repeat;
+  background-image: url("../img/bg-map-mobile@1x.png") no-repeat;
   background-color: #f7f7f7;
   display: block;
   margin: 0 auto;
@@ -34,9 +34,16 @@
   height: 360px;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-    background-image: url("../img/bg-map-mobile@2x.jpg");
+    background-image: url("../img/bg-map-mobile@2x.png");
     background-size: 320px auto;
   }
+}
+
+.contacts__map {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  height: 360px;
 }
 
 .contacts__title {
@@ -106,14 +113,21 @@
   }
 
   .contacts__image {
-    background-image: url("../img/bg-map-tablet@1x.jpg") no-repeat;
+    background-image: url("../img/bg-map-tablet@1x.png") no-repeat;
     width: 100%;
     height: 410px;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("../img/bg-map-tablet@2x.jpg");
+      background-image: url("../img/bg-map-tablet@2x.png");
       background-size: 767px auto;
     }
+  }
+
+  .contacts__map {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    height: 410px;
   }
 }
 
@@ -147,13 +161,20 @@
   }
 
   .contacts__image {
-    background-image: url("../img/bg-map-desktop@1x.jpg") no-repeat;
+    background-image: url("../img/bg-map-desktop@1x.png") no-repeat;
     width: 100%;
     height: 400px;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("../img/bg-map-desktop@2x.jpg");
+      background-image: url("../img/bg-map-desktop@2x.png");
       background-size: 1440px auto;
     }
+  }
+
+  .contacts__map {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    height: 400px;
   }
 }
